fix(blog post): set draft status to true for the post on sleeping too much to prevent it from being published prematurely style(base.scss): adjust pre element styling to allow horizontal scrolling and preserve whitespace formatting

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -101,7 +101,11 @@ samp {
 	background-color: var(--bg-secondary);
 	padding: 0 0.25rem 0 0.25rem;
 	border-radius: 0.25rem;
-	white-space: pre-wrap;
+}
+
+pre {
+	white-space: pre;
+	overflow-x: auto;
 }
 
 blockquote {
